src/objects/Beca__c.object
<CustomObject>
    <fields>
        <fullName>A__c</fullName>
        <label>A</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AplicaPara__c</fullName>
        <label>Aplica para</label>
        <picklist>
            <picklistValues>
                <fullName>Inscripción</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colegiatura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinscripción</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>B__c</fullName>
        <label>B</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Baja__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Baja</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BecaPromocion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beca promoción</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beneficiados__c</fullName>
        <description>Se usa para indicar quienes pueden ser los beneficiarios de esa beca.</description>
        <label>Beneficiados</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <label>C</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CantidadInscritos__c</fullName>
        <label>Cantidad de inscritos</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CategoriaLetra__c</fullName>
        <globalPicklist>CategoriaLetra</globalPicklist>
        <label>Categoría (letra)</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>D__c</fullName>
        <label>D</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Descripcion__c</fullName>
        <label>Descripción</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Duracion__c</fullName>
        <label>Duración</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E__c</fullName>
        <label>E</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EstatusBeca__c</fullName>
        <label>Estatus</label>
        <picklist>
            <picklistValues>
                <fullName>Activo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactivo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>F__c</fullName>
        <label>F</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FechaAutorizacion__c</fullName>
        <label>Fecha de autorización</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FechaFirma__c</fullName>
        <label>Fecha de alta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final__c</fullName>
        <label>Final</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>G__c</fullName>
        <label>G</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>H__c</fullName>
        <label>H</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IdInterno__c</fullName>
        <externalId>true</externalId>
        <label>Id Interno</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IdTipoBeca__c</fullName>
        <label>Id Tipo Beca</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incrementos__c</fullName>
        <label>Incrementos</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inicial__c</fullName>
        <label>Inicial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Nivel__c</fullName>
        <label>Nivel</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NoAplicaPara__c</fullName>
        <label>No aplica para</label>
        <picklist>
            <picklistValues>
                <fullName>Colegiatura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inscripción</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ningún otro concepto de pago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinscripción</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Titulación</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>NombreConvenio__c</fullName>
        <description>Nombre de la empresa con la que se tiene el convenio</description>
        <label>Nombre de convenio</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfertaEducativa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oferta Educativa</label>
        <referenceTo>OfertaEducativa__c</referenceTo>
        <relationshipLabel>Becas</relationshipLabel>
        <relationshipName>Becas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Periodo__c</fullName>
        <formula>OfertaEducativa__r.Periodo__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Periodo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plantel__c</fullName>
        <label>Plantel</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PorcentajeBeca__c</fullName>
        <label>% beca</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Programa__c</fullName>
        <label>Programa</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PromedioMinimo__c</fullName>
        <label>Promedio mínimo</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequiereAutorizacion__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Requiere autorización por el área de Finanzas</inlineHelpText>
        <label>Requiere autorización</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TipoAutorizacion__c</fullName>
        <label>Tipo de autorización</label>
        <picklist>
            <picklistValues>
                <fullName>Área de ingresos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercadotecnia</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TipoBeca__c</fullName>
        <globalPicklist>TipoBeca</globalPicklist>
        <label>Tipo de Beca</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TipoPorcentaje__c</fullName>
        <label>Tipo de %</label>
        <picklist>
            <picklistValues>
                <fullName>Fijo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rango</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UsuarioAutoriza__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Usuario que autoriza</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BecasAutorizadas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisiblePara__c</fullName>
        <label>Visible para</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>Beca</label>
    <listViews>
        <fullName>BecasConvenio</fullName>
        <columns>NAME</columns>
        <columns>IdTipoBeca__c</columns>
        <columns>NombreConvenio__c</columns>
        <columns>IdInterno__c</columns>
        <columns>FechaFirma__c</columns>
        <columns>TipoBeca__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Beca__c.BecaConvenio</value>
        </filters>
        <filters>
            <field>IdInterno__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Becas Convenio</label>
    </listViews>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Nombre de Beca</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Becas</pluralLabel>
    <recordTypes>
        <fullName>BecaComercial</fullName>
        <active>true</active>
        <label>Beca Comercial</label>
    </recordTypes>
    <recordTypes>
        <fullName>BecaConvenio</fullName>
        <active>true</active>
        <label>Beca Convenio</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>